namespace Dominio;

public class Plantas
{
    public int nroPiso;
    public int slots;
    public bool estado; 
    public  string ubicacion;
    public string vehiculo;

    public Plantas(int nroPiso, int slots, bool estado, string ubicacion, string vehiculo)
    {
        this.nroPiso = nroPiso;
        this.slot = slot;
        this

    }
}
