namespace Dominio.src;

public class PanelElectrico
{
    public void pagarCarga()
    {

    }
    public void CargarVehiculoElectrico()
    {

    }
}