classDiagram
    Estacionamiento *-- Planta
    Planta o-- Slot
    Slot o-- Vehiculo
    Planta *-- PaneldeEstacionamiento
    
    Sistema *-- Estacionamiento
    Sistema *-- TicketEntrada
    Sistema *-- PortalAsistenteEstacionamiento
    Sistema *-- PortalInformacionCliente
    Sistema *-- PanelElectrico
    
    Sistema o-- Administrador
    Sistema o-- Cliente
    Sistema o-- Asistente
    
    Asistente --> PortalAsistenteEstacionamiento

    Cliente *-- TicketEntrada

    TicketEntrada *-- PanelEntrada
    TicketEntrada *-- PanelSalida
    TicketEntrada *-- PortalInformacionCliente
    TicketEntrada *-- Vehiculo

    PanelSalida *-- Asistente
    PanelSalida *-- Pago    

    PortalInformacionCliente <-- Pago

    PanelElectrico <-- Pago

    class Sistema
    Sistema: +Usuarios~Usuario~
    Sistema: +Tickets~TicketEntrada~
    Sistema: +Administradores~Administrador~
    Sistema: +Estacionamiento
    Sistema: +PortalAsistenteEstacionamiento
    Sistema: +PortalInformacionCliente
    Sistema: +PanelElectrico
    Sistema: CrearUsuario()
    Sistema: EliminarUsuario()
    Sistema: EmitirTicket()

    class Estacionamiento
    Estacionamiento: +Nombre
    Estacionamiento: +Direccion
    Estacionamiento: +Planta

    class Planta
    Planta: +Nro-Piso
    Planta: +Slots~Slot~
    Planta: +Habilitado
    Planta: +Ubicacion
    Planta: +Vehiculo
    Planta: AgregarSlot()
    Planta: Habilitar()
    Planta: Deshabilitar()

    class Slot
    Slot: +TipoSlot

    class Vehiculo
    Vehiculo: +Matricula
    Vehiculo: +TipoVehiculo

    class Administrador
    Administrador: +Id
    Administrador: +Nombre
    Administrador: +Contraseña
    Administrador: +Plantas~Planta~
    Administrador: +Slots~Slot~
    Administrador: +Asistentes~Asistente~
    Administrador: AgregarPisos()
    Administrador: EliminarPisos()
    Administrador: ModificarPiso()
    Administrador: AgregarLugares()
    Administrador: AgregarAsistente()
    Administrador: EliminarAsistente()

    class Asistente
    Asistente: +Id
    Asistente: +Nombre
    Asistente: +Contraseña
    
    class Cliente
    Cliente: +TicketEntrada
    Cliente: PagarTicket()
    Cliente: PagarPanelElectrico()

    class TicketEntrada
    TicketEntrada: +Matricula
    TicketEntrada: +TipoVehiculo
    TicketEntrada: +HorarioIngreso
    TicketEntrada: +Monto

    class PanelEntrada
    PanelEntrada: +TicketEntrada
    PanelEntrada: +Ubicacion
    PanelEntrada: ImprimirTicketEntrada()

    class PanelSalida
    PanelSalida: +TicketSalida
    PanelSalida: +PagoTicket
    PanelSalida: PagarTarifadeEstacionamiento()
    PanelSalida: ActualizarTicket()

    class Pago
    Pago: +TipodePago
    Pago: +MontodePago

    class PaneldeEstacionamiento
    PaneldeEstacionamiento: +EspaciosLibres

    class PortalAsistenteEstacionamiento
    PortalAsistenteEstacionamiento: +Asistentes~Asistente~
    PortalAsistenteEstacionamiento: +Sistema
    PortalAsistenteEstacionamiento: EscaneoTicket()
    PortalAsistenteEstacionamiento: ProcesodePago()

    class PortalInformacionCliente
    PortalInformacionCliente: +TicketEntrada
    PortalInformacionCliente: +TicketSalida
    PortalInformacionCliente: +PagoTicket
    PortalInformacionCliente: ActualizarTicket()
    PortalInformacionCliente: PagarTarifadeEstacionamiento()

    class PanelElectrico
    PanelElectrico: PagarCarga()
    PanelElectrico: CargarVehiculoElectrico()